--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 This is my operating systems' midterm project in which I have manipulated XV6's scheduling algorithm. I have added priority algorithm, and I have also added quantum to my algorithm 
 and I have implemented a multi-level queue algorithm.
+My report is the answer to questions in persian language. There are links provided to my commits for each question in my report.
+
